更新README 内链跳转教程

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
   <body>
     <nav>
       <a href="#/">首页</a>
-      <a href="#/youdao/">有道</a>
+      <a href="#/有道/">有道</a>
     </nav>
     <div id="app"></div>
     <script>
       window.$docsify = {
         name: "ChrisWang",
         repo: "https://github.com/SilverComet7/My-Article-collection",
+        coverpage: true,
         loadNavbar: true,
         loadSidebar: true,
         subMaxLevel: 4,
@@ -36,7 +37,7 @@
         search: "auto", // 默认值
         search: [
           "/", // => /README.md
-          "/youdao/", // => /youdao.md
+          "/有道/", // => /有道.md
           "/编程通用/", 
         ],
         // 完整配置参数
